layout issue fixed

--- a/eatfit247-cms/src/app/ui/member/member-call-schedule/member-call-schedule.component.scss
+++ b/eatfit247-cms/src/app/ui/member/member-call-schedule/member-call-schedule.component.scss
@@ -1,3 +1,8 @@
+.data-table .mat-table {
+  height: calc(100vh - 260px) !important;
+  overflow-y: scroll;
+}
+
 .mat-column-detail {
   min-width: 260px;
   max-width: 260px;
